Fix overflowing link and message inputs on screen smaller than 1024px Change px size to em

--- a/frontend/src/app/modules/availability/new-slot/event-detail/event-detail.component.sass
+++ b/frontend/src/app/modules/availability/new-slot/event-detail/event-detail.component.sass
@@ -14,20 +14,27 @@
     height: 90%
     grid-template-columns: 50% 50%
     resize: none
-    overflow: auto
+    overflow-y: auto
+    overflow-x: hidden
     @media (max-width: $desktop-min-width)
         grid-template-columns: 100%
+        width: 85%
 
     .form-container
-        width: 100%
         grid-column-start: 1
         grid-column-end: span 2
+        @media (max-width: $desktop-min-width)
+            grid-column: 1
+            width: 90%
 
     .time-zones-container,
     .password-container
         width: 100%
         grid-column-start: 1
         grid-column-end: 2
+        @media (max-width: $desktop-min-width)
+            grid-column: 1
+            width: 90%
 
     .language-container,
     .bookings-container
@@ -43,6 +50,7 @@
             grid-column: 1
             grid-row-start: 4
             grid-row-end: 4
+            width: 90%
 
     .mat-divider
         grid-column-start: 1
@@ -50,8 +58,8 @@
 
 .input-item
     padding-left: 5px
-    height: 38px
-    width: 205px
+    height: 2.4em
+    width: 12.8em
 
 .checkbox-text
     font-weight: 400
@@ -86,7 +94,7 @@
     border: 2px solid $regent-gray
     border-radius: 4px
     height: 36px
-    width: 327px
+    width: 20.4em
 
 .selectBlock
     height: 36px
@@ -158,7 +166,7 @@ p
         box-sizing: border-box
         align-items: center
         display: flex
-        width: min(280px, 90%)
+        width: min(17.5em, 90%)
 
     .mat-select-value
         color: $dark-gray
@@ -166,16 +174,16 @@ p
 
 .password-input-container
     box-sizing: border-box
-    width: min(280px, 90%)
+    width: min(17.5em, 90%)
     display: grid
-    grid-template-columns: calc(100% - 40px) 40px
+    grid-template-columns: calc(100% - 2.5em) 2.5em
     border: 2px solid $loblolly
     border-radius: 8px
 
 .input-description-tooltip-container
     display: grid
     grid-template-columns: calc(100% - 24px) 24px
-    width: min(280px, 90%)
+    width: min(17.5em, 90%)
     .mat-icon
         font-size: 14px
         align-self: end
